chore: use new logo and add file association
Co-authored-by: Vukory <merjembajramovic8@gmail.com>

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "bats",
     "displayName": "Bats (Bash Automated Testing System)",
     "description": "Bats (Bash Automated Testing System) language support for VSCode.",
-    "version": "0.1.10",
+    "version": "0.1.11",
     "publisher": "jetmartin",
     "author": {
         "name": "J-Et. Martin",
@@ -37,7 +37,11 @@
                 "extensions": [
                     ".bats"
                 ],
-                "configuration": "./language-configuration.json"
+                "configuration": "./language-configuration.json",
+                "icon": {
+                  "light": "./images/icon-light.svg",
+                  "dark": "./images/icon-dark.svg"
+                }
             }
         ],
         "grammars": [
